# share-everything

./: .gitignore  LICENSE  README.md  share-everything.code-workspace
android/: README.md
api/: .env.example  README.md  docker-compose.yml  heroku.yml
api/mongo/: .gitignore  init.js  init.sh
api/nginx/: Dockerfile
api/nginx/conf/: nginx.conf.template  proxy.conf
api/server/: .env.example  .prettierrc.yml  Dockerfile  package-lock.json  package.json  tsconfig.json
api/server/src/: app.ts  aws.ts  contents_provider.ts  db.ts  provider.ts  rooms_provider.ts
chrome/: .eslintrc.yml  README.md  package-lock.json  package.json  tsconfig.json
chrome/src/: background.ts  content.css  content.html  manifest.json  popup.html  popup.ts
windows/: .clang-format  CMakeLists.txt  README.md
windows/src/: CMakeLists.txt  api.cpp  api.h  app.cpp  app.h  fetch.cpp  fetch.h  image_manager.cpp  image_manager.h  logger.cpp  logger.h  main.cpp  notify_icon.cpp  notify_icon.h  pch.h  result.cpp  result.h  storage.cpp  storage.h  tchar_util.cpp  tchar_util.h
windows/src/resource/: menu.rc  resource.h
